egress-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: abr
spec:
  hosts:
  - abr.business.gov.au
  - www.ibm.com
  - ifconfig.me
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
